--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pyyaml = "^6.0"
 black = "^23.1.0"
 isort = "^5.12.0"
 pytest = "^7.2.1"
+ruff = "^0.0.254"
 
 [build-system]
 requires = ["poetry-core"]
