--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 pydantic = "^1.10.5"
 pygobject = "^3.42.2"
 pyyaml = "^6.0"
+gbulb = "^0.6.4"
 
 [tool.poetry.plugins."yafti.plugin"]
 "yafti.plugin.flatpak" = "yafti.plugin.flatpak:Flatpak"
