--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ black = "^23.1.0"
 isort = "^5.12.0"
 pytest = "^7.2.1"
 ruff = "^0.0.254"
+coverage = "^7.2.1"
+pytest-cov = "^4.0.0"
+pytest-asyncio = "^0.20.3"
 
 [build-system]
 requires = ["poetry-core"]
