--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ classifiers = [
     "Topic :: System :: Software Distribution",
 ]
 
+[tool.poetry.scripts]
+yafti = "yafti.__main__:run"
+
 [tool.poetry.dependencies]
 python = "^3.11"
 pydantic = "^1.10.5"
