fix: use fedora:37

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
   build:
     name: Create RPM Release
     runs-on: ubuntu-latest
+    container: fedora:37
 
     steps:
       - name: Checkout code
