--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      - run: ls -lah
       - name: build RPM package
         id: rpm_build
         uses: naveenrajm7/rpmbuild@master
