--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       releases_created: ${{ steps.release-please.outputs.releases_created }}
+      tag: ${{ steps.release-please.outputs.tag_name }}
     steps:
       - uses: google-github-actions/release-please-action@v3
         id: release-please
@@ -48,8 +49,9 @@ jobs:
         with:
           spec_file: "pkg/rpm.spec"
       - name: Upload release binaries
-        uses: alexellis/upload-assets@0.4.0
+        uses: ublue-os/upload-assets@pass-in-tag
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           asset_paths: '["./${{ steps.rpm_build.outputs.source_rpm_path }}", "./${{ steps.rpm_build.outputs.rpm_dir_path }}noarch/*.rpm"]'
+          tag: ${{ needs.release-please.outputs.tag }}
