--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -53,5 +53,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          asset_paths: '["./${{ steps.rpm_build.outputs.source_rpm_path }}/*", "./${{ steps.rpm_build.outputs.rpm_dir_path }}noarch/*.rpm"]'
+          asset_paths: '["./${{ steps.rpm_build.outputs.source_rpm_path }}*", "./${{ steps.rpm_build.outputs.rpm_dir_path }}noarch/*"]'
           tag: ${{ needs.release-please.outputs.tag }}
