--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,5 +44,5 @@ pytest-cov = "^4.0.0"
 pytest-asyncio = "^0.20.3"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
