--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,10 @@ coverage = "^7.2.1"
 pytest-cov = "^4.0.0"
 pytest-asyncio = ">=0.20.3,<0.22.0"
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+
 [build-system]
 requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
