--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
           version: 1.4.0
           virtualenvs-create: true
           virtualenvs-in-project: true
+      - name: System Deps
+        run: sudo apt install libgirepository1.0-dev libgtk-3-dev libadwaita-1-dev
       - name: Cache Dependencies
         id: cache-deps
         uses: actions/cache@v3
@@ -28,9 +30,7 @@ jobs:
           path: .venv
           key: pydeps-${{ hashFiles('**/poetry.lock') }}
       - name: Install Dependencies
-        run: |
-          sudo apt install libgirepository1.0-dev libgtk-3-dev libadwaita-1-dev
-          poetry install --no-interaction --no-root
+        run: poetry install --no-interaction --no-root
         if: steps.cache-deps.outputs.cache-hit != 'true'
       - name: Install Project
         run: poetry install --no-interaction
