--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
 ]
 
 [tool.poetry.scripts]
-yafti = "yafti.__main__:run"
+yafti = "yafti.__main__:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
