fix: apply suggestions from code review
Co-authored-by: Marco Ceppi <marco@ceppi.net>

--- a/tests/example-final-screen.yml
+++ b/tests/example-final-screen.yml
@@ -18,6 +18,7 @@ screens:
       title: "All done"
       icon: "/path/to/icon"
       links:
-        - "Gnome Software": /usr/bin/gnome-software
+        - "Gnome Software": 
+            run: /usr/bin/gnome-software
       description: |
         Thanks for installing, join the community, next steps
