--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,10 @@ ruff = ">=0.0.254,<0.0.258"
 coverage = "^7.2.1"
 pytest-cov = "^4.0.0"
 pytest-asyncio = ">=0.20.3,<0.22.0"
+mkdocs = "^1.4.2"
+mkdocstrings = {extras = ["python"], version = "^0.20.0"}
+mkdocs-material = "^9.1.4"
+mkdocs-git-revision-date-localized-plugin = "^1.2.0"
 
 [tool.isort]
 profile = "black"
