--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,13 @@
 site_name: Yafti
 repo_url: https://github.com/ublue-os/yafti
 repo_name: ublue-os/yafti
-
+watch: [README.md, yafti]
 nav:
   - Home: "index.md"
   - Getting Started: "getting-started.md"
   - Developers: "developers.md"
   - Contributing: "contributing.md"
-  - Reference: "reference.md"
+  - Reference: reference/
 
 theme:
   name: "material"
@@ -42,6 +42,13 @@ theme:
         name: Switch to dark mode
 
 plugins:
+  - gen-files:
+      scripts:
+        - docs/generate_reference.py
+  - git-revision-date-localized:
+      fallback_to_build_date: true
+  - literate-nav:
+      nav_file: SUMMARY.txt
   - mkdocstrings:
       default_handler: python
       handlers:
@@ -50,8 +57,6 @@ plugins:
           options:
             show_source: true
   - search
-  - git-revision-date-localized:
-      fallback_to_build_date: true
 
 markdown_extensions:
   - admonition
