--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ mkdocs = "^1.4.2"
 mkdocstrings = {extras = ["python"], version = "^0.20.0"}
 mkdocs-material = "^9.1.4"
 mkdocs-git-revision-date-localized-plugin = "^1.2.0"
+mkdocs-gen-files = "^0.4.0"
+mkdocs-literate-nav = "^0.6.0"
 
 [tool.isort]
 profile = "black"
