--- a/tests/example-final-screen.yml
+++ b/tests/example-final-screen.yml
@@ -18,7 +18,11 @@ screens:
       title: "All done"
       icon: "/path/to/icon"
       links:
-        - "Gnome Software": 
+        - "Install More Applications": 
             run: /usr/bin/gnome-software
+        - "Website":
+            run: /usr/bin/xdg-open https://ublue.it
+        - "Join the Discord Community":
+            run: /usr/bin/xdg-open https://discord.gg/XjG48C7VHx 
       description: |
         Thanks for installing, join the community, next steps
