--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
       - name: System Deps
-        run: sudo apt install libgirepository1.0-dev libgtk-3-dev libadwaita-1-dev
+        run: |
+          sudo apt update
+          sudo apt install libgirepository1.0-dev libgtk-3-dev libadwaita-1-dev
       - name: Cache Dependencies
         id: cache-deps
         uses: actions/cache@v3
