chore: update yaftibox and dependencies

--- a/yaftibox.ini
+++ b/yaftibox.ini
@@ -1,7 +1,7 @@
 [yaftibox]
 image=ghcr.io/ublue-os/fedora-toolbox:latest
-additional_packages="poetry just"
-additional_packages="gtk3 gtk4 python3-devel cairo-devel gobject-introspection-devel cairo-gobject-devel libadwaita-devel"
+additional_packages="just poetry black python3-isort python3-devel"
+additional_packages="gtk3 gtk4 cairo-devel gobject-introspection-devel cairo-gobject-devel libadwaita-devel"
 nvidia=true
 init=false
 pull=true
