--- a/tests/bluefin.yml
+++ b/tests/bluefin.yml
@@ -35,7 +35,7 @@ screens:
           - Bottles: com.usebottles.bottles
           - Heroic Games Launcher: com.heroicgameslauncher.hgl
           - Lutris: net.lutris.Lutris
-          - MangoHUD: org.freedesktop.Platform.VulkanLayer.MangoHud//22.08
+          - MangoHUD: org.freedesktop.Platform.VulkanLayer.MangoHud/x86_64/23.08
           - Steam: com.valvesoftware.Steam
           - Proton Plus for Steam: com.vysp3r.ProtonPlus
         Office:
