--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "yafti"
-version = "0.8.0"
+version = "0.9.0"
 description = "Yet another first time installer"
 authors = ["Marco Ceppi <marco@ceppi.net>"]
 license = "Apache 2.0"
@@ -19,7 +19,7 @@ yafti = "yafti.__main__:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pydantic = "1.10.2"  # This needs to match the minimum supported version in Fedora
+pydantic = "2.8.2"
 pygobject = "^3.42.2"
 pyyaml = "^6.0"
 gbulb = "^0.6.4"
