feat: Split up CI tests
Split unit and linting into separate jobs

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -1,13 +1,14 @@
-name: CI
+name: Unit Tests
 
 on:
   push:
     branches:
       - main
   pull_request:
+  workflow_dispatch:
 
 jobs:
-  test:
+  pytest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
