--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ yafti = "yafti.__main__:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pydantic = "2.8.2"
+pydantic = "^2.8.2"
 pygobject = "^3.42.2"
 pyyaml = "^6.0"
 gbulb = "^0.6.4"
