--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ pygobject = "^3.42.2"
 pyyaml = "^6.0"
 gbulb = "^0.6.4"
 rich = "^13.3.2"
-typer = ">=0.7,<0.10"
+typer = ">=0.7"
 
 [tool.poetry.plugins."yafti.plugin"]
 "yafti.plugin.flatpak" = "yafti.plugin.flatpak:Flatpak"
